--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,15 @@ h1 {
   width: 30px;
   cursor: pointer;
 }
+
+.scroll-dialog {
+  position: absolute;
+  background-color: white;
+  top: 6em;
+  right: 3%;
+  transform: translateX(-50);
+  z-index: 10;
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  border: 1px solid black;
+}
